# stdout_toolbox

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: CI.yml
src/: lib.rs  main.rs
src/colours/: enums.rs  func.rs  mod.rs  structs.rs  traits.rs
src/colours/enums/: font.rs
src/modifiers/: func.rs  mod.rs  structs.rs  traits.rs
src/modifiers/enums/: cursor.rs  font.rs  mod.rs
src/modifiers/traits/: enum_traits.rs  enum_values.rs  mod.rs  modifiers_join.rs  modifiers_search.rs
src/modifiers2/: mod.rs
src/modifiers2/enums/: mod.rs  unified.rs
src/modifiers2/enums/cursor/: mod.rs
src/modifiers2/enums/font/: colours.rs  intensity.rs  mod.rs
src/modifiers2/structs/: ansi_command.rs  errors.rs  mod.rs
src/modifiers2/traits/: into_ansi.rs  mod.rs  reset.rs  wrapper.rs
src/progress/: mod.rs
src/text/: mod.rs
src/text/split/: chars.rs  mod.rs  traits.rs
src/text/split2/enums/: chars.rs  mod.rs  tokens.rs
tests/: mod.rs  test_modifiers2.rs  test_text.rs
tests/test_modifiers2/: mod.rs  test_ansi_modifier.rs  test_base_enums.rs
