[package]
name = "stdout_toolbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdout_toolbox"
path = "src/main.rs"

[lib]
name = "stdout_toolbox"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "0"